--- a/kadai_014/style.css
+++ b/kadai_014/style.css
@@ -8,7 +8,7 @@
   font-size: 20px;
 }
 h1{
-  font-size: 2em;
+  font-size: 2rem;
   border-bottom: solid 3px rgb(115, 115, 114);
   letter-spacing: 1.2em;
   text-shadow: 1px 1px 2px gray;
