--- a/kadai_014/style.css
+++ b/kadai_014/style.css
@@ -1,10 +1,7 @@
 .google-fonts{
     font-family: "Josefin Sans", sans-serif;
-    font-optical-sizing: auto;
-    font-weight: weight;
-    font-style: normal;
   }
-.html{
+html{
   font-size: 20px;
 }
 h1{
